--- a/style.css
+++ b/style.css
@@ -1,64 +1,58 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: sans-serif;
-    /*font-size: 50px;*/
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    justify-content: center;
-    overflow: hidden;
-    margin: 0;
+  font-family: sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
 }
 
 .container {
-    display: flex;
-    width: 90vw;
+  display: flex;
+  width: 90vh;
 }
 
 .panel {
-    background-size: auto 100% ;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    border-radius: 50px;
-    color: white;
-    cursor: pointer;
-    flex: 0.5;
-    margin: 10px;
-    position: relative;
-    transition: flex 0.7s ease-in;
+  background-size: auto 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh;
+  border-radius: 50px;
+  color: #fff;
+  flex: 0.5;
+  margin: 10px;
+  position: relative;
+  transform: flex 0.7s ease-in;
 }
 
 .panel h3 {
-    font-size: 24px;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    margin: 0;
-    opacity: 0;
+  font-size: 24px;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
 }
 
-.panel.active {
-    flex: 5;
+.panel .active {
+  flex: 5;
 }
 
-.panel.active h3 {
-    opacity: 1;
+.panel .active h3 {
+  opacity: 1;
 }
 
-@media(max-width: 480px){
-    .container{
-        width: 100vw;
-    }
-
-    .panel:nth-of-type(4) ,
-    .panel:nth-of-type(5){
-        display: none;
-    }
+@media (max-width: 480px) {
+  .container {
+    width: 100vw;
+  }
+  .panel:nth-of-type(4),
+  .panel:nth-of-type(5) {
+    display: none;
+  }
 }
